Bug 857393 - XHR in Web Workers fails to throw XMLHttpRequest::Send failures to callers (ex: NS_ERROR_FILE_NOT_FOUND), exception may be reported erroneously elsewhere. r=bent, a=blocking-b2g=tef+

uplift of:
https://hg.mozilla.org/mozilla-central/rev/e418e5123168

try build was:
https://tbpl.mozilla.org/?tree=Try&rev=1757a26ab7b4